--- a/contact-api.html
+++ b/contact-api.html
@@ -292,75 +292,83 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
           </div>
 
-          <div class="col-12 col-md-3 text-center rounded lift">
+          <div class="col-12 col-md-3 text-center rounded lift hover-active">
 
-            <div>
-              <span class="badge badge-lg badge-rounded-circle bg-primary text-white">
-                <i class="fe fe-arrow-up"></i>
+            <div class="hover-parent">
+              <div class="hover">
+                <span class="badge badge-lg badge-rounded-circle bg-primary text-white">
+                  <i class="fe fe-arrow-up"></i>
+                </span>
+              </div>
+  
+              <span class="btn btn-primary-soft mt-n2 w-100 hover">
+                +1-718-484-9122
               </span>
+  
+              <p class="text-primary mt-2 hover">
+                Personal mobile number
+              </p>
             </div>
-
-            <span class="btn btn-primary-soft border mt-n2 w-100">
-              +1-718-484-9122
-            </span>
-
-            <p class="text-primary mt-2">
-              Personal mobile number
-            </p>
 
           </div>
 
           <div class="col-12 col-md-3 text-center rounded lift">
 
-            <div>
-              <span class="badge badge-lg badge-rounded-circle bg-secondary text-white hoverp">
-                <i class="fe fe-arrow-up"></i>
+            <div class="hover-parent">
+              <div class="hover">
+                <span class="badge badge-lg badge-rounded-circle bg-primary text-white">
+                  <i class="fe fe-arrow-up"></i>
+                </span>
+              </div>
+  
+              <span class="btn btn-primary-soft border mt-n2 w-100 hover">
+                username@gmail.com
               </span>
+  
+              <p class="text-primary mt-2 hover">
+                Personal email address
+              </p>
             </div>
-
-            <span class="btn btn-secondary-soft border mt-n2 w-100 hoverp-bg">
-              username@gmail.com
-            </span>
-
-            <p class="text-muted hoverp-txt mt-2">
-              Personal email address
-            </p>
 
           </div>
 
           <div class="col-12 col-md-3 text-center rounded lift">
 
-            <div>
-              <span class="badge badge-lg badge-rounded-circle bg-secondary text-white">
-                <i class="fe fe-arrow-up"></i>
+            <div class="hover-parent">
+              <div class="hover">
+                <span class="badge badge-lg badge-rounded-circle bg-primary text-white">
+                  <i class="fe fe-arrow-up"></i>
+                </span>
+              </div>
+  
+              <span class="btn btn-primary-soft border mt-n2 w-100 hover">
+                person@nubela.co
               </span>
+  
+              <p class="text-primary mt-2 hover">
+                Work email address
+              </p>
             </div>
-
-            <span class="btn btn-secondary-soft border mt-n2 w-100">
-              person@nubela.co
-            </span>
-
-            <p class="text-muted mt-2">
-              Work email address
-            </p>
 
           </div>
 
           <div class="col-12 col-md-3 text-center rounded lift">
 
-            <div>
-              <span class="badge badge-lg badge-rounded-circle bg-secondary text-white">
-                <i class="fe fe-arrow-up"></i>
+            <div class="hover-parent">
+              <div class="hover">
+                <span class="badge badge-lg badge-rounded-circle bg-primary text-white">
+                  <i class="fe fe-arrow-up"></i>
+                </span>
+              </div>
+  
+              <span class="btn btn-primary-soft border mt-n2 w-100 hover">
+                twitter.com/elonmusk
               </span>
+  
+              <p class="text-primary mt-2 hover">
+                Social media
+              </p>
             </div>
-
-            <span class="btn btn-secondary-soft border mt-n2 w-100">
-              twitter.com/elonmusk
-            </span>
-
-            <p class="text-muted mt-2">
-              Social media
-            </p>
 
           </div>
 
