--- a/contact-api.html
+++ b/contact-api.html
@@ -292,7 +292,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
           </div>
 
-          <div class="col-12 col-md-3 text-center rounded lift">
+          <div class="col-12 col-md-3 text-center rounded lift hover-active">
 
             <div class="hover-parent">
               <div class="hover">
