--- a/employee-listing-page.html
+++ b/employee-listing-page.html
@@ -64,21 +64,9 @@
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
                 <div class="row no-gutters">
                   <div class="col-12">
-                    <div class="row no-gutters">
-                      <div class="col-12 col-lg-6">
+                    <div class="row g-0">
 
-                        <!-- Heading -->
-                        <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/dwarf forms logo blue.svg"> Dwarf Forms
-                        </h6>
-
-                        <!-- List -->
-                        <a class="dropdown-item" href="dwarf-forms.html">
-                          Dwarf Forms
-                        </a>
-                        <a class="dropdown-item mb-5" href="#!">
-                          API Documentation
-                        </a>
+                      <div class="col-12 col-lg-6 pl-4">
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
@@ -87,7 +75,7 @@
 
                         <!-- List -->
                         <a class="dropdown-item mb-5" href="linkdb.html">
-                          Database of public <br>
+                          Database of public<br>
                           LinkedIn profiles
                         </a>
 
@@ -102,6 +90,7 @@
                         </a>
 
                       </div>
+
                       <div class="col-12 col-lg-6">
 
                         <!-- Heading -->
@@ -125,11 +114,21 @@
                         <a class="dropdown-item" href="#!">
                           Reverse Email Lookup API
                         </a>
+                        <a class="dropdown-item" href="employee-search-api.html">
+                          Employee Search API Endpoint
+                        </a>
+                        <a class="dropdown-item" href="contact-api.html">
+                          Contact API Endpoint
+                        </a>
+                        <a class="dropdown-item" href="jobs-api.html">
+                          Jobs API Endpoint
+                        </a>
                         <a class="dropdown-item mb-5" href="#!">
                           API Documentation
                         </a>
 
                       </div>
+
                     </div>
                   </div>
                 </div>
@@ -670,6 +669,21 @@
               <li class="mb-3">
                 <a href="reverse-email-lookup.html" class="text-reset">
                   Reverse Email Lookup
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="employee-search-api.html" class="text-reset">
+                  Employee Search API Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="contact-api.html" class="text-reset">
+                  Contact API Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="jobs-api.html" class="text-reset">
+                  Jobs API Endpoint
                 </a>
               </li>
             </ul>
