--- a/contact-api.html
+++ b/contact-api.html
@@ -145,6 +145,12 @@
                         <a class="dropdown-item" href="employee-search-api.html">
                           Employee Search API Endpoint
                         </a>
+                        <a class="dropdown-item" href="contact-api.html">
+                          Contact API Endpoint
+                        </a>
+                        <a class="dropdown-item" href="jobs-api.html">
+                          Jobs API Endpoint
+                        </a>
                         <a class="dropdown-item mb-5" href="#!">
                           API Documentation
                         </a>
@@ -1107,6 +1113,16 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
               <li class="mb-3">
                 <a href="employee-search-api.html" class="text-reset">
                   Employee Search API Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="contact-api.html" class="text-reset">
+                  Contact API Endpoint
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="jobs-api.html" class="text-reset">
+                  Jobs API Endpoint
                 </a>
               </li>
             </ul>
