--- a/proxycurl-dashboard-work-logs.html
+++ b/proxycurl-dashboard-work-logs.html
@@ -141,7 +141,7 @@
                   </h6>
 
                   <!-- List -->
-                  <ul class="card-list list text-gray-700 mb-6">
+                  <ul class="card-list list text-gray-700">
                     <li class="list-item">
                       <a class="list-link text-reset" href="#!">
                         API Key and Billing
@@ -154,9 +154,14 @@
                     </li>
                   </ul>
 
-                  <a class="font-size-sm text-danger font-weight-bold" href="#!">
-                    Log out
-                  </a>
+                  <hr class="my-3">
+
+                  <div class="custom-control custom-switch mb-0 mt-6">
+                    <input type="checkbox" class="custom-control-input" id="dashboardSwitch">
+                    <label class="custom-control-label" for="dashboardSwitch">
+                      Switch to new dashboard
+                    </label>
+                  </div>
 
                 </div>
               </div>
