--- a/proxycurl-dashboard.html
+++ b/proxycurl-dashboard.html
@@ -154,6 +154,15 @@
                     </li>
                   </ul>
 
+                  <hr class="my-3">
+
+                  <div class="custom-control custom-switch mb-0 mt-6">
+                    <input type="checkbox" class="custom-control-input" id="dashboardSwitch">
+                    <label class="custom-control-label" for="dashboardSwitch">
+                      Switch to new dashboard
+                    </label>
+                  </div>
+
                 </div>
               </div>
 
