--- a/jobs-api.html
+++ b/jobs-api.html
@@ -256,7 +256,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-8 pb-11 pb-md-12 bg-light border-bottom">
+    <section class="pt-8 pb-11 pb-md-12 bg-light bg-between border-bottom" style="background-image: url(./assets/img/illustrations/job-api-left.png), url(./assets/img/illustrations/job-api-right.png);">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8" data-aos="fade-up">
