--- a/jobs-api.html
+++ b/jobs-api.html
@@ -269,7 +269,7 @@
               </h1>
   
               <p class="font-size-lg text-muted mb-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                Fetch fresh job posting data on any company into your data-driven application
               </p>
   
               <!--Linkedin-->
@@ -374,9 +374,13 @@
           <div class="col-12 col-md-10 col-lg-8 text-center">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold mb-md-10">
+            <h1 class="font-weight-bold">
               List jobs posted by any target company
             </h1>
+
+            <p class="font-size-lg text-muted mb-md-10">
+              Given a target company, our Job Listings Endpoint will return an exhaustive list of all jobs posted by this company on LinkedIn.
+            </p>
 
           </div>
 
@@ -448,9 +452,12 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           <div class="col-12 col-md-10 col-lg-8 text-center">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold mb-md-10">
+            <h1 class="font-weight-bold">
               Get job details
             </h1>
+
+            <p class="font-size-lg text-muted mb-md-10">
+              Get details of any job posted on LinkedIn.
 
           </div>
 
