--- a/company-profile-page.html
+++ b/company-profile-page.html
@@ -37,15 +37,6 @@
 
         <div class="modal-content">
 
-          <div class="modal-header">
-            <h5 class="font-weight-bold h3" id="moreModalLabel">
-              Get the list of employees for Google
-            </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-
           <div class="modal-body">
 
             <h2 class="font-weight-bold h3">
@@ -56,7 +47,7 @@
               Proxycurl is a developer's tool to integrate People/Company related data into their applcations
             </p>
 
-            <div class="highlight-block mb-4">
+            <div class="highlight-block">
               <div class="d-flex">
                 <span style="width: 10px; height: 10px;" class="bg-danger rounded-circle"></span>
                 <span style="width: 10px; height: 10px;" class="bg-warning rounded-circle ml-1"></span>
@@ -83,6 +74,8 @@ response = requests.get(api_endpoint,
             <button type="button" class="btn btn-primary">Get API Key and run code</button>
             
           </div>
+
+        </div>
 
       </div>
 
