--- a/company-profile-page.html
+++ b/company-profile-page.html
@@ -733,7 +733,7 @@ response = requests.get(api_endpoint,
                   </div>
 
                   <nav aria-label="Page navigation">
-                    <ul class="pagination pagination-sm justify-content-center mt-6">
+                    <ul class="pagination pagination-sm mt-6">
                       <li class="page-item disabled">
                         <a class="page-link" href="#" tabindex="-1">Previous</a>
                       </li>
