--- a/jobs-api.html
+++ b/jobs-api.html
@@ -287,78 +287,103 @@
 
             </div>
 
-            <div class="highlight-block mt-3 mb-6">
+            <h2 class="font-weight-bold text-center mt-4">
+              List jobs
+            </h2>
 
-              <!-- Controls -->
-              <div class="d-flex">
-                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
-                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-              </div>               
+            <!--Code-->
+            <div class="mt-3 mb-6">
 
-              <pre>
-                <code class="language-python">
-{  
-    "employee": {  
-        "role":   "Software Engineer",
-        "name":   John Doe,
-    }  
-}  </code></pre>
-            </div>
+              <div class="highlight-block">
 
-            <div class="highlight-block mb-6">
-
-              <!-- Controls -->
-              <div class="d-flex">
-                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
-                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-              </div>               
-
-              <pre>
-                <code class="language-python">
-{  
-    "employee": {  
-        "role":   "Artist",
-        "name":   Michelangelo,
-    }  
-}  </code></pre>
-            </div>
-
-            <div class="highlight-block mb-6">
-
-              <!-- Controls -->
-              <div class="d-flex">
-                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
-                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
-              </div>               
-
-              <pre>
-                <code class="language-python">
-{  
-    "employee": {  
-        "role":   "Marketing Manager",
-        "name":   William Shakespeare,
-    }  
-}  </code></pre>
-            </div>
-
-            <div class="row justify-content-center">
-
-              <div class="col-12 text-center">
-
-                <button type="button" class="btn btn-primary text-center mr-lg-4 mb-2">
-                  Get API Key
-                </button>  
-                  
-                <a class="btn btn-primary-soft text-center mb-2" href="#!">
-                  Jobs API Docs
+                <!-- Controls -->
+                <div class="d-flex">
+                  <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                </div>               
+  
+                <pre>
+                  <code class="language-python">
+  {  
+      "employee": {  
+          "role":   "Software Engineer",
+          "name":   John Doe,
+      }  
+  }  </code></pre>
+              </div>
+  
+              <div class="text-center mt-n2">
+                <a class="pt-4 pb-2 pl-2 pr-2 rounded-circle bg-primary text-white" href="#getJob">
+                  <i class="fe fe-arrow-right" style="font-size: 24px;"></i>
                 </a>
+              </div>
 
-              </div>            
-    
-            </div> <!-- row -->
+            </div>
+
+            <!--Code-->
+            <div class="mt-3 mb-6">
+
+              <div class="highlight-block">
+
+                <!-- Controls -->
+                <div class="d-flex">
+                  <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                </div>               
+  
+                <pre>
+                  <code class="language-python">
+  {  
+      "employee": {  
+          "role":   "Artist",
+          "name":   Michelangelo,
+      }  
+  }  </code></pre>
+              </div>
+  
+              <div class="text-center mt-n2">
+                <a class="pt-4 pb-2 pl-2 pr-2 rounded-circle bg-primary text-white" href="#getJob">
+                  <i class="fe fe-arrow-right" style="font-size: 24px;"></i>
+                </a>
+              </div>
+
+            </div>
+
+            <!--Code-->
+            <div class="mt-3 mb-6">
+
+              <div class="highlight-block">
+
+                <!-- Controls -->
+                <div class="d-flex">
+                  <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                  <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                </div>               
+  
+                <pre>
+                  <code class="language-python">
+  {  
+      "employee": {  
+          "role":   "Scientist",
+          "name":   Isaac Newton,
+      }  
+  }  </code></pre>
+              </div>
+  
+              <div class="text-center mt-n2">
+                <a class="pt-4 pb-2 pl-2 pr-2 rounded-circle bg-primary text-white" href="#getJob">
+                  <i class="fe fe-arrow-right" style="font-size: 24px;"></i>
+                </a>
+              </div>
+
+            </div>
+
+            <p class="">
+              ... still don't find the proper way to do it
+            </p>
 
           </div>
         </div> <!-- / .row -->
@@ -371,14 +396,14 @@
 
         <div class="row justify-content-center">
 
-          <div class="col-12 col-md-10 col-lg-8 text-center">
+          <div class="col-12 col-md-8 text-center">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold">
+            <h1 class="font-weight-bold mb-1">
               List jobs posted by any target company
             </h1>
 
-            <p class="font-size-lg text-muted mb-md-10">
+            <p class="font-size-lg text-muted mb-md-6">
               Given a target company, our Job Listings Endpoint will return an exhaustive list of all jobs posted by this company on LinkedIn.
             </p>
 
@@ -389,7 +414,7 @@
 
         <div class="row justify-content-center">
 
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-8">
 
             <div class="highlight-block">
 
@@ -430,7 +455,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 }</code></pre>
             </div>
 
-            <div class="text-center">
+            <div class="text-center mb-md-12">
               <a class="btn btn-primary" href="#!" target="_blank">
                 See Docs for Jobs Listing Endpoint
               </a>
@@ -440,24 +465,18 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
         </div>
 
-      </div> <!-- / .container -->
-    </section>
+        <div class="row justify-content-center" id="getJob">
 
-    <!--THIRD FOLD-->
-    <section class="py-8 py-md-11 border-bottom bg-light">
-      <div class="container">
-
-        <div class="row justify-content-center">
-
-          <div class="col-12 col-md-10 col-lg-8 text-center">
+          <div class="col-12 col-md-8 text-center">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold">
+            <h1 class="font-weight-bold mb-1">
               Get job details
             </h1>
 
-            <p class="font-size-lg text-muted mb-md-10">
+            <p class="font-size-lg text-muted mb-6">
               Get details of any job posted on LinkedIn.
+            </p>
 
           </div>
 
@@ -466,7 +485,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
         <div class="row justify-content-center">
 
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-8">
 
             <div class="highlight-block">
 
@@ -516,6 +535,230 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           </div>
 
         </div>
+
+      </div> <!-- / .container -->
+    </section>
+
+    <!--THIRD FOLD-->
+    <section class="py-8 py-md-11 border-bottom bg-light">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-12 col-md-4">
+
+            <h3 class="font-weight-bold mb-4">
+              Filter jobs by
+            </h3>
+
+            <div class="card shadow-light-lg">
+
+              <div class="card-body">
+
+                <div class="mb-4">
+                  <h4 class="font-weight-bold">
+                    Flexibility
+                  </h4>
+  
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="onsite" checked>
+                    <label class="form-check-label" for="onsite">
+                      On-site
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="hybrid">
+                    <label class="form-check-label" for="hybrid">
+                      Hybrid
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="remote">
+                    <label class="form-check-label" for="remote">
+                      Remote
+                    </label>
+                  </div>
+
+                </div>
+
+                <div class="mb-4">
+                  <h4 class="font-weight-bold">
+                    Region
+                  </h4>
+  
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault2" id="worldwide" checked>
+                    <label class="form-check-label" for="worldwide">
+                      Worldwide
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault2" id="usa">
+                    <label class="form-check-label" for="usa">
+                      USA
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault2" id="india">
+                    <label class="form-check-label" for="india">
+                      India
+                    </label>
+                  </div>
+
+                </div>
+
+                <div class="mb-4">
+                  <h4 class="font-weight-bold">
+                    Keyword
+                  </h4>
+  
+                  <form>
+                    <div class="input-group input-group-sm">
+                      <span class="input-group-text pe-0 border-end-0">
+                        <i class="fe fe-search" id="searchJob"></i>
+                      </span>
+                      <input class="form-control form-control-sm ps-2 border-start-0" type="search" placeholder="Search job title" aria-label="Search for a job" aria-describedby="searchJob">
+                    </div>
+                  </form>               
+
+                </div>
+
+                <div class="mb-4">
+                  <h4 class="font-weight-bold">
+                    Last posted
+                  </h4>
+  
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault3" id="yesterday" checked>
+                    <label class="form-check-label" for="yesterday">
+                      Yesterday
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault3" id="lastWeek">
+                    <label class="form-check-label" for="lastWeek">
+                      Last week
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault3" id="lastMonth">
+                    <label class="form-check-label" for="lastMonth">
+                      Last month
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault3" id="anytime">
+                    <label class="form-check-label" for="anytime">
+                      Anytime
+                    </label>
+                  </div>
+
+                </div>
+
+                <div class="mb-4">
+                  <h4 class="font-weight-bold">
+                    Company
+                  </h4>
+  
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault4" id="meta" checked>
+                    <label class="form-check-label" for="meta">
+                      Meta
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault4" id="google">
+                    <label class="form-check-label" for="google">
+                      Google
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault4" id="amazon">
+                    <label class="form-check-label" for="amazon">
+                      Amazon
+                    </label>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-8">
+
+            <h3 class="font-weight-bold mb-4">
+              5 results found
+            </h3>
+
+            <div class="card shadow-light-lg d-flex">
+
+              <div class="card-body">
+
+                <div class="table-responsive mb-4">
+                  <table class="table table-bordered table-sm table-hover font-size-sm">
+                    <thead>
+                      <tr>
+                        <th scope="col">Job title</th>
+                        <th scope="col">Job status</th>
+                        <th scope="col">Region
+                        <th scope="col">Posted</th>
+                        <th scope="col">Company</th>
+                      </tr>
+                    </thead>
+                    <tbody class="text-gray-700">
+                      <tr>
+                        <td scope="row">UI Designer</th>
+                        <td>On-site</td>
+                        <td>USA</td>
+                        <td>Yesterday</td>
+                        <td>Meta</td>
+                      </tr>
+                      <tr>
+                        <td scope="row">Product Manager</th>
+                        <td>On-site</td>
+                        <td>USA</td>
+                        <td>Yesterday</td>
+                        <td>Meta</td>
+                      </tr>
+                      <tr>
+                        <td scope="row">Software Engineer</th>
+                        <td>On-site</td>
+                        <td>USA</td>
+                        <td>Yesterday</td>
+                        <td>Meta</td>
+                      </tr>
+                      <tr>
+                        <td scope="row">PHP Developer</th>
+                        <td>On-site</td>
+                        <td>USA</td>
+                        <td>Yesterday</td>
+                        <td>Meta</td>
+                      </tr>
+                      <tr>
+                        <td scope="row">Senior Software Engineer</th>
+                        <td>Remote</td>
+                        <td>USA</td>
+                        <td>Yesterday</td>
+                        <td>Google</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+                <a class="btn btn-sm btn-primary w-100" href="#!" target="_blank">
+                  See Docs for Job Listings Endpoint
+                </a>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div> <!-- / .row -->
 
       </div> <!-- / .container -->
     </section>
