--- a/jobs-api.html
+++ b/jobs-api.html
@@ -697,6 +697,137 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
 
               <div class="card-body">
 
+                <div class="row pb-4 mb-4 align-items-top no-gutters border-bottom">
+
+                  <div class="col-12 col-md-2">
+                    <img class="rounded-circle" width="64" alt="google logo" src="assets/img/logos/google logo.jpeg">
+                  </div>
+
+                  <div class="col-12 col-md-10">
+                    <p class="lead text-info font-weight-bold mb-0">
+                      Software Engineer
+                    </p>
+
+                    <p class="mb-0">
+                      Meta
+                    </p>
+
+                    <p class="text-gray-700 mb-2">
+                      Manchester, England, United Kingdom (On-site)
+                    </p>
+
+                    <p class="font-size-sm text-muted mb-0">
+                      Yesterday
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="row pb-4 mb-4 align-items-top no-gutters border-bottom">
+
+                  <div class="col-12 col-md-2">
+                    <img class="rounded-circle" width="64" alt="google logo" src="assets/img/logos/google logo.jpeg">
+                  </div>
+
+                  <div class="col-12 col-md-10">
+                    <p class="lead text-info font-weight-bold mb-0">
+                      Software Engineer
+                    </p>
+
+                    <p class="mb-0">
+                      Meta
+                    </p>
+
+                    <p class="text-gray-700 mb-2">
+                      Manchester, England, United Kingdom (On-site)
+                    </p>
+
+                    <p class="font-size-sm text-muted mb-0">
+                      Yesterday
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="row pb-4 mb-4 align-items-top no-gutters border-bottom">
+
+                  <div class="col-12 col-md-2">
+                    <img class="rounded-circle" width="64" alt="google logo" src="assets/img/logos/google logo.jpeg">
+                  </div>
+
+                  <div class="col-12 col-md-10">
+                    <p class="lead text-info font-weight-bold mb-0">
+                      Software Engineer
+                    </p>
+
+                    <p class="mb-0">
+                      Meta
+                    </p>
+
+                    <p class="text-gray-700 mb-2">
+                      Manchester, England, United Kingdom (On-site)
+                    </p>
+
+                    <p class="font-size-sm text-muted mb-0">
+                      Yesterday
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="row pb-4 mb-4 align-items-top no-gutters border-bottom">
+
+                  <div class="col-12 col-md-2">
+                    <img class="rounded-circle" width="64" alt="google logo" src="assets/img/logos/google logo.jpeg">
+                  </div>
+
+                  <div class="col-12 col-md-10">
+                    <p class="lead text-info font-weight-bold mb-0">
+                      Software Engineer
+                    </p>
+
+                    <p class="mb-0">
+                      Meta
+                    </p>
+
+                    <p class="text-gray-700 mb-2">
+                      Manchester, England, United Kingdom (On-site)
+                    </p>
+
+                    <p class="font-size-sm text-muted mb-0">
+                      Yesterday
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="row pb-4 mb-4 align-items-top no-gutters border-bottom">
+
+                  <div class="col-12 col-md-2">
+                    <img class="rounded-circle" width="64" alt="google logo" src="assets/img/logos/google logo.jpeg">
+                  </div>
+
+                  <div class="col-12 col-md-10">
+                    <p class="lead text-info font-weight-bold mb-0">
+                      Software Engineer
+                    </p>
+
+                    <p class="mb-0">
+                      Meta
+                    </p>
+
+                    <p class="text-gray-700 mb-2">
+                      Manchester, England, United Kingdom (On-site)
+                    </p>
+
+                    <p class="font-size-sm text-muted mb-0">
+                      Yesterday
+                    </p>
+                  </div>
+
+                </div>
+
+                <!--table
                 <div class="table-responsive mb-4">
                   <table class="table table-bordered table-sm table-hover font-size-sm">
                     <thead>
@@ -747,6 +878,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
                     </tbody>
                   </table>
                 </div>
+                -->
 
                 <a class="btn btn-sm btn-primary w-100" href="#!" target="_blank">
                   See Docs for Job Listings Endpoint
@@ -761,6 +893,74 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
         </div> <!-- / .row -->
 
       </div> <!-- / .container -->
+    </section>
+
+    <section class="pt-9 pb-10">
+
+      <div class="container">
+
+        <div class="row align-items-center mb-6">
+
+          <div class="col-12 col-md-6">
+
+            <span class="badge badge-pill badge-primary-soft">
+              <span class="h6 text-primary text-uppercase">Hiring Velocity</span>
+            </span>
+
+            <h1 class="display-5 font-weight-bold pt-4">
+              Identify investment signals by<span class="text-primary"> tracking job postings count of startups</span>
+            </h1>
+
+          </div>
+
+          <div class="col-12 col-md-6" aos-init aos-animate>
+            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+          </div>
+
+        </div>
+
+        <div class="row align-items-center mb-6">
+
+          <div class="col-12 col-md-6">
+
+            <span class="badge badge-pill badge-primary-soft">
+              <span class="h6 text-primary text-uppercase">Hiring Velocity</span>
+            </span>
+
+            <h1 class="display-5 font-weight-bold pt-4">
+              Identify<span class="text-primary"> remote-only job opportunities</span>
+            </h1>
+
+          </div>
+
+          <div class="col-12 col-md-6" aos-init aos-animate>
+            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+          </div>
+
+        </div>
+
+        <div class="row align-items-center mb-6">
+
+          <div class="col-12 col-md-6">
+
+            <span class="badge badge-pill badge-primary-soft">
+              <span class="h6 text-primary text-uppercase">Hiring Velocity</span>
+            </span>
+
+            <h1 class="display-5 font-weight-bold pt-4">
+              Search for companies looking to<span class="text-primary"> hire for specific skillsets</span>
+            </h1>
+
+          </div>
+
+          <div class="col-12 col-md-6" aos-init aos-animate>
+            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+          </div>
+
+        </div>
+
+      </div>
+
     </section>
 
     <!-- PRICING
