--- a/jobs-api.html
+++ b/jobs-api.html
@@ -1002,7 +1002,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           <div class="col-12 col-md-6">
 
             <span class="badge badge-pill badge-primary-soft">
-              <span class="h6 text-primary text-uppercase">Identify investment</span>
+              <span class="h6 text-primary text-uppercase">Tracking job postings</span>
             </span>
 
             <h1 class="display-5 font-weight-bold pt-4">
@@ -1016,7 +1016,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           </div>
 
           <div class="col-12 col-md-6" aos-init aos-animate>
-            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+            <img class="img-fluid rounded mb-2" alt="Identify investment signals by tracking job postings count of startups illustration" src="assets/img/illustrations/Identify investment signals by tracking job postings count of startups.png">
           </div>
 
         </div>
@@ -1040,7 +1040,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           </div>
 
           <div class="col-12 col-md-6" aos-init aos-animate>
-            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+            <img class="img-fluid rounded mb-2" alt="Identify remote-only job opportunities illustration" src="assets/img/illustrations/Identify remote-only job opportunities.png">
           </div>
 
         </div>
@@ -1064,7 +1064,7 @@ curl -X GET -H 'Accept: */*' -H 'Accept-Encoding: gzip, deflate' -H 'Authorizati
           </div>
 
           <div class="col-12 col-md-6" aos-init aos-animate>
-            <img class="img-fluid rounded mb-2" src="Illustration_landscape_placement.png">
+            <img class="img-fluid rounded mb-2" alt="Search for companies looking to hire for specific skillsets illustration" src="assets/img/illustrations/Search for companies looking to hire for specific skillsets.png">
           </div>
 
         </div>
