--- a/proxycurl-dashboard.html
+++ b/proxycurl-dashboard.html
@@ -303,8 +303,8 @@
                     </div>
 
                     <div class="col-12">
-                      <button type="submit" class="btn btn-block btn-primary">
-                        Top up
+                      <button type="submit" class="btn btn-block btn-secondary-soft" disabled>
+                        Buy credits on the new dashboard
                       </button>
                     </div>
 
@@ -332,7 +332,7 @@
 
                     <!-- Switch -->
                     <div class="custom-control custom-switch">
-                      <input type="checkbox" class="custom-control-input" id="switchON" checked>
+                      <input type="checkbox" class="custom-control-input" id="switchON">
                       <label class="custom-control-label" for="switchON"></label>
                     </div>
 
@@ -449,8 +449,8 @@
                   <div class="col-auto">
 
                     <!-- Button -->
-                    <button class="btn btn-xs btn-primary" data-bs-toggle="modal" data-bs-target="#modalPayment">
-                      Add new
+                    <button class="btn btn-xs btn-secondary-soft" disabled data-bs-toggle="modal" data-bs-target="#modalPayment">
+                      Add new card on the new dashboard
                     </button>
 
                   </div>
