--- a/ebook.html
+++ b/ebook.html
@@ -265,6 +265,7 @@
       <!-- Contetn -->
       <div class="container">
         <div class="row align-items-center">
+
           <div class="col-12 col-md-5 pr-md-10 order-md-2">
             
             <!-- Image -->
@@ -273,11 +274,14 @@
             </div>
 
           </div>
+
           <div class="col-12 col-md-7 pr-md-10 order-md-1" data-aos="fade-up">
             
+            <span class="h1 bg-primary text-white px-4 py-1 font-weight-bold rounded">eBook</span>
+
             <!-- Heading -->
-            <h1 class="display-3 font-weight-bold">
-              Ultimate Guide To LinkedIn Data <span class="bg-primary text-white px-4 py-1 rounded">eBook</span> Enrichment Of People & Company Profiles -<br>
+            <h1 class="display-3 font-weight-bold mt-4">
+              Ultimate Guide To LinkedIn Data Enrichment Of People & Company Profiles -<br>
               <span class="text-primary">For CTOs & Software Engineers</span>.
             </h1>
 
@@ -571,7 +575,7 @@
               <div class="ms-5">
 
                 <h3 class="font-weight-bold">
-                  The Software Engineers’ Guide To LinkedIn Data?
+                  The Software Engineers’ Guide To LinkedIn Data
                 </h3>
 
                 <p class="text-gray-700 mb-6">
