--- a/index.html
+++ b/index.html
@@ -943,44 +943,44 @@
 
         <div class="row align-items-top">
 
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-7 mb-8 mb-md-0">
 
-            <div class="row border border-dark border-dotted rounded py-4 px-4">
+            <div class="row border rounded py-4 px-4" style="border: dashed !important; border-color: #94a3b8 !important;">
 
-              <div class="col-3 text-center border-right border-dark">
+              <div class="col-3 text-center border-right border-dark" style="border-width: 2.5px !important;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-link-2"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg>
                 <p class="font-weight-bold">
                   URL
                 </p>
               </div>
 
-              <div class="col-3 text-center border-right border-dark">
+              <div class="col-3 text-center border-right border-dark" style="border-width: 2.5px !important;">
                 <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m12,12c-2.7614,0-5-2.2386-5-5s2.2386-5,5-5,5,2.2386,5,5-2.2386,5-5,5ZM3,20v1c0,.5522.4477,1,1,1h16c.5523,0,1-.4478,1-1v-1c0-2.2092-1.7908-4-4-4H7c-2.2092,0-4,1.7908-4,4Z"/></svg>
                 <p class="font-weight-bold">
                   Name & Company
                 </p>
               </div>
 
-              <div class="col-3 text-center border-right border-dark">
+              <div class="col-3 text-center border-right border-dark" style="border-width: 2.5px !important;">
                 <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m21.73866,19.21486l-4.11455-4.11449c-.27477-.27477-.35645-.69996-.17301-1.04259.85643-1.5999,1.20428-3.51002.79867-5.52257-.66195-3.28486-3.36137-5.88479-6.6687-6.42334C5.98709,1.20099,1.20127,5.98665,2.1118,11.58047c.53833,3.30733,3.13848,6.00669,6.42329,6.66859,2.0125.40555,3.92262.05793,5.52252-.79834.34263-.18333.76771-.10165,1.04248.17312l4.11494,4.11483c.34846.34846.91347.34846,1.26193-.00006l1.26176-1.26199c.3484-.34846.3484-.91336-.00006-1.26176Zm-11.52932-4.36601c-2.55837,0-4.64012-2.0813-4.64012-4.63967s2.08174-4.64006,4.64012-4.64006,4.64012,2.08174,4.64012,4.64006-2.08174,4.63967-4.64012,4.63967Z" fill="#000"/></svg>
                 <p class="font-weight-bold">
                   Search
                 </p>
               </div>
 
-              <div class="col-3 text-center border-dark">
+              <div class="col-3 text-center">
                 <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m20,7.5h-2v-2c0-1.6543-1.3457-3-3-3h-6c-1.6543,0-3,1.3457-3,3v2h-2c-1.10455,0-2,.89539-2,2v10c0,1.10455.89545,2,2,2h16c1.10455,0,2-.89545,2-2v-10c0-1.10461-.89545-2-2-2Zm-4,0h-8v-2c0-.55127.44873-1,1-1h6c.55127,0,1,.44873,1,1v2Z" fill="#000" /></svg>
                 <p class="font-weight-bold">
                   Role
                 </p>
               </div>
 
-              <div class="col-12 border-bottom border-dark mt-4 mb-6">
+              <div class="col-12 border-bottom border-dark mt-4 mb-6" style="border-width: 2.5px !important;">
               </div>
 
               <div class="col-12 text-center">
                 <p class="lead font-weight-bold">
-                  URL <span class="text-primary border border-primary rounded text-truncate ml-2 py-2 px-2">https://linkedin.com/in/wleo</span>
+                  URL <span class="text-primary border border-primary rounded text-truncate ml-2 py-2 px-2">https://linkedin.com/in/...</span>
                 </p>
               </div>
 
@@ -988,7 +988,7 @@
 
           </div>
 
-          <div class="col-12 col-md-5 pl-8">
+          <div class="col-12 col-md-5 pl-md-8">
             
             <span class="badge rounded-pill badge-info-soft mb-6">
               <span class="h6 text-uppercase">Use cases</span>
