--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./assets/css/theme.min.css">
 
-    <title>Landing Aji</title>
+    <title>Proxycurl</title>
 
   </head>
 
@@ -944,6 +944,83 @@
         <div class="row align-items-top">
 
           <div class="col-12 col-md-7 mb-8 mb-md-0">
+
+            <div class="row mb-8">
+
+              <div class="card shadow shadow-light-lg">
+
+                <div class="card-body">
+
+                  <div class="row align-items-center justify-content-center mb-4 pb-6 border-bottom">
+
+                    <div class="col-2">
+                      <div class="avatar avatar-xxl">
+                        <img class="avatar-img rounded-circle" src="assets/img/avatars/ava-Steven.png" alt="Avatar">
+                      </div>
+                    </div>
+
+                    <div class="col-10">
+                      <h2 class="font-weight-bold mb-0">
+                        Steven Goh
+                      </h2>
+                      <p class="mb-0">
+                        CEO, Nubela Pte Ltd
+                      </p>
+                    </div>
+
+                  </div>
+
+                  <div class="row text-center">
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22,11.375v-2c0-1.1046-.8954-2-2-2h-2.25v-2c0-1.5166-1.2334-2.75-2.75-2.75h-6c-1.5166,0-2.75,1.2334-2.75,2.75v2h-2.25c-1.1046,0-2,.8954-2,2v2l10,4,10-4ZM7.75,5.375c0-.6895,.5605-1.25,1.25-1.25h6c.6895,0,1.25,.5605,1.25,1.25v2H7.75v-2Z" fill="#3b82f6" opacity=".3"/><path d="M2,19.375v-6.3843l10,4.0001,10-4.0001v6.3843c0,1.1046-.8954,2-2,2H4c-1.1046,0-2-.8954-2-2Z" fill="#3b82f6"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Work
+                      </p>
+                    </div>
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21.2433,8.0059l-7.4551,2.6841c-1.1479,.4133-2.4285,.4133-3.5764,0l-3.8052-1.37s2.2017-1.2073,3.9216-2.1593l-4.8546,1.8207c-.5825,.2178-.9736,.7822-.9736,1.4043v6.6143c0,.0163-.0078,.03-.0093,.0459,.3373,.0961,.6103,.358,.6987,.7115l.3256,1.3022c.2463,.9856-.499,1.9403-1.515,1.9403s-1.7613-.9547-1.515-1.9403l.3256-1.3022c.0884-.3535,.3614-.6154,.6987-.7115-.0015-.0159-.0093-.0296-.0093-.0459v-6.6143c0-.7041,.3055-1.3587,.8022-1.8234l-1.5455-.5565c-1.0089-.3632-1.0089-1.6487,0-2.0119l7.4551-2.6841c1.1479-.4133,2.4285-.4133,3.5764,0l7.4551,2.6841c1.0089,.3632,1.0089,1.6487,0,2.0119Z" fill="#3b82f6" opacity=".3"/><path d="M16.2797,15.2752c-2.8156,.9664-5.7437,.9664-8.5593,0-.9885-.3394-1.6323-1.7623-1.5065-3.2548l.0962-1.1409,3.3941,1.2221c.7402,.2666,1.5181,.3994,2.2959,.3994s1.5557-.1328,2.2959-.3994l3.3941-1.2222,.0962,1.1411c.1258,1.4926-.5181,2.9155-1.5065,3.2548Z" fill="#3b82f6"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Education
+                      </p>
+                    </div>
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21.9025,20.1789c.3034,.6069-.1378,1.3211-.8162,1.3211h-6.1725c-.6784,0-1.1196-.7142-.8162-1.3211l3.0862-6.1743c.3363-.6728,1.2961-.6728,1.6324,0l3.0862,6.1743ZM2.5975,3.321l3.0862,6.1743c.3363,.6729,1.2961,.6729,1.6324,0l3.0862-6.1743c.3034-.6069-.1378-1.321-.8162-1.321H3.4138c-.6784,0-1.1196,.7141-.8162,1.321Z" fill="#3b82f6" opacity=".3"/><path d="M11,17.5c0,2.4853-2.0147,4.5-4.5,4.5s-4.5-2.0147-4.5-4.5,2.0147-4.5,4.5-4.5,4.5,2.0147,4.5,4.5ZM20,2h-4c-1.1046,0-2,.8954-2,2v4c0,1.1046,.8954,2,2,2h4c1.1046,0,2-.8954,2-2V4c0-1.1046-.8954-2-2-2Z" fill="#3b82f6"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Social
+                      </p>
+                    </div>
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22,19V5c0-1.1046-.8954-2-2-2H4c-1.1046,0-2,.8954-2,2v14c0,1.1046,.8954,2,2,2H20c1.1046,0,2-.8954,2-2Zm-10-4.3311c-.5342,0-1.0674-.1436-1.543-.4287l-6.457-3.8741v-2.3323l7.4854,4.4915c.3164,.1895,.7119,.1895,1.0303,0l7.4844-4.4915v2.3324l-6.4561,3.8739c-.4766,.2852-1.0107,.4287-1.5439,.4287Z" fill="#3b82f6" opacity=".3"/><path d="M12,14.6689c-.5342,0-1.0674-.1436-1.543-.4287l-6.457-3.8741v-2.3323l7.4854,4.4915c.3164,.1895,.7119,.1895,1.0303,0l7.4844-4.4915v2.3324l-6.4561,3.8739c-.4766,.2852-1.0107,.4287-1.5439,.4287Z" fill="#3b82f6"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Contact
+                      </p>
+                    </div>
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.25,3.0053H4.2553c-.1402-.0006-.2808-.0002-.4218,.0227-1.1875,.1934-2.0835,1.2998-2.0835,2.5732,0,1.3193,1.0737,2.3926,2.3931,2.3926h1.6069v11.0009c0,1.1046,.8954,2,2,2h12.5c1.1046,0,2-.8954,2-2V5.0053c0-1.1046-.8954-2-2-2ZM5.75,6.9938h-1.6069c-.7681,0-1.3931-.625-1.3931-1.3926,0-.7891,.5352-1.4707,1.2446-1.5869,.4497-.0723,.8857,.0459,1.2261,.3359,.3364,.2861,.5293,.7031,.5293,1.1436v1.5Zm8.25,10.7509h-5c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h5c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm5-3H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm0-3H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm0-4H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Z" fill="#3b82f6" opacity=".3"/><path d="M5.75,6.9938h-1.6069c-.7681,0-1.3931-.625-1.3931-1.3926,0-.7891,.5352-1.4707,1.2446-1.5869,.4497-.0723,.8857,.0459,1.2261,.3359,.3364,.2861,.5293,.7031,.5293,1.1436v1.5Zm8.25,10.7509h-5c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h5c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm5-3H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm0-3H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Zm0-4H9c-.4141,0-.75-.3359-.75-.75s.3359-.75,.75-.75h10c.4141,0,.75,.3359,.75,.75s-.3359,.75-.75,.75Z" fill="#3b82f6"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Posts
+                      </p>
+                    </div>
+
+                    <div class="col-2">
+                      <?xml version="1.0" encoding="UTF-8"?><svg id="a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m20,6.5h-2.5v-1.5c0-1.3784-1.1216-2.5-2.5-2.5h-6c-1.3784,0-2.5,1.1216-2.5,2.5v1.5h-2.5c-1.3784,0-2.5,1.1216-2.5,2.5v10c0,1.3784,1.1216,2.5,2.5,2.5h16c1.3784,0,2.5-1.1216,2.5-2.5v-10c0-1.3784-1.1216-2.5-2.5-2.5Zm-12.5-1.5c0-.8271.6729-1.5,1.5-1.5h6c.8271,0,1.5.6729,1.5,1.5v1.5H7.5v-1.5Zm14,14c0,.8271-.6729,1.5-1.5,1.5H4c-.8271,0-1.5-.6729-1.5-1.5v-7.2614l9.3145,3.7258c.0596.0239.1226.0356.1855.0356s.126-.0117.1855-.0356l9.3145-3.7258v7.2614Zm0-8.3386l-9.5,3.8-9.5-3.8v-1.6614c0-.8271.6729-1.5,1.5-1.5h16c.8271,0,1.5.6729,1.5,1.5v1.6614Z"/></svg>
+                      <p class="small font-weight-bold mt-1">
+                        Other
+                      </p>
+                    </div>
+
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
 
             <div class="row border rounded py-4 px-4" style="border: dashed !important; border-color: #94a3b8 !important;">
 
